Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15862

KeyNavigation breaks if item "enabled" state is false or "visible" state is false

XMLWordPrintable

    • 5710cc981ae39a018d4c30b2c77f6623713a5bf1

      KeyNavigation breaks if one of the item's "enabled" state is false or
      "visible" state is false.

      For more information look at attached example.

      If I do not disable item, everything works fine.

      KeyNavigation work flow suppose to be skip disable or not visible item and go to next item.

        1. main.qml
          0.9 kB
          Mehul R. Patel
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chham Christopher Ham (closed Nokia identity) (Inactive)
            mehulrp Mehul R. Patel
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes