KeyNavigation skips disabled or invisible items

When using KeyNavigation, if the "visible" or "enabled" property of
the item set in the KeyNavigation handler is false, an attempt will
be made to skip this item and setFocus to the following item.

Task-number: QTBUG-15862
Reviewed-by: Martin Jones